--- a/index.html
+++ b/index.html
@@ -1,69 +1,300 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Operational Cost & ROI Calculator</title>
-  <link rel="stylesheet" href="styles.css" />
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Zenstores Homepage Mockup</title>
+<style>
+  /* Reset & base */
+  body, html {
+    margin: 0; padding: 0;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background: #f9fafb;
+    color: #1a202c;
+    box-sizing: border-box;
+  }
+
+  .container {
+    display: flex;
+    max-width: 1200px;
+    margin: 40px auto;
+    gap: 40px;
+    padding: 0 20px;
+  }
+
+  /* Left side - Zenstores hero mock */
+  .left-panel {
+    flex: 1;
+    max-width: 600px;
+  }
+
+  .left-panel h1 {
+    font-size: 2.75rem;
+    font-weight: 700;
+    line-height: 1.2;
+    margin-bottom: 20px;
+  }
+
+  .left-panel p {
+    font-size: 1.125rem;
+    margin-bottom: 30px;
+    line-height: 1.5;
+  }
+
+  .cta-buttons {
+    display: flex;
+    gap: 20px;
+  }
+
+  .cta-buttons button {
+    padding: 14px 28px;
+    font-size: 1rem;
+    border-radius: 6px;
+    border: none;
+    cursor: pointer;
+    font-weight: 600;
+  }
+
+  .btn-primary {
+    background-color: #1a4ed6;
+    color: white;
+  }
+
+  .btn-secondary {
+    background-color: transparent;
+    border: 2px solid #1a4ed6;
+    color: #1a4ed6;
+  }
+
+  /* Right side - Calculator widget */
+  .right-panel {
+    flex: 1;
+    max-width: 450px;
+    background: white;
+    border-radius: 12px;
+    box-shadow: 0 6px 18px rgb(0 0 0 / 0.1);
+    padding: 30px 30px 40px;
+  }
+
+  .right-panel h2 {
+    font-size: 1.75rem;
+    font-weight: 700;
+    margin-bottom: 24px;
+  }
+
+  label {
+    display: block;
+    font-weight: 600;
+    margin-bottom: 6px;
+    margin-top: 20px;
+  }
+
+  input[type="number"], input[type="range"] {
+    width: 100%;
+    padding: 8px 12px;
+    font-size: 1rem;
+    border-radius: 6px;
+    border: 1px solid #cbd5e1;
+    margin-bottom: 12px;
+  }
+
+  .category-buttons {
+    display: flex;
+    gap: 12px;
+    margin-bottom: 20px;
+  }
+
+  .category-button {
+    flex: 1;
+    padding: 10px 0;
+    background: #e2e8f0;
+    border-radius: 8px;
+    text-align: center;
+    cursor: pointer;
+    font-weight: 600;
+    user-select: none;
+    transition: background-color 0.2s ease;
+  }
+
+  .category-button.selected {
+    background: #1a4ed6;
+    color: white;
+  }
+
+  .persona-message {
+    margin: 20px 0;
+    font-style: italic;
+    font-size: 1rem;
+    color: #334155;
+    min-height: 44px;
+  }
+
+  .results {
+    background: #f1f5f9;
+    border-radius: 8px;
+    padding: 20px;
+    font-size: 1rem;
+    font-weight: 600;
+  }
+
+  .results div {
+    margin-bottom: 10px;
+  }
+
+  .total {
+    font-size: 1.25rem;
+    font-weight: 700;
+    margin-top: 12px;
+  }
+
+</style>
 </head>
 <body>
-  <div class="calculator-container">
-    <!-- Left Side: Cost Savings and Revenue Impact -->
-    <div class="calculator current-logic">
-      <h2>What's the opportunity?</h2>
 
-      <!-- Monthly Orders Slider -->
-      <label for="orders">Monthly Orders: <span id="orderValue">250</span></label>
-      <input type="range" id="orders" min="250" max="25000" value="250" step="250" />
+<div class="container">
 
-      <!-- Average Order Value Input -->
-      <label for="aov">Average Order Value (£):</label>
-      <input type="number" id="aov" value="50" min="0" />
-
-      <!-- Business Category Selector -->
-      <label>Business Category:</label>
-      <div class="category-selector" id="categorySelector">
-        <button class="category-btn selected" data-category="fashion" title="Fashion">
-          👗<br/>Fashion
-        </button>
-        <button class="category-btn" data-category="food" title="Food & Drink">
-          🍔<br/>Food & Drink
-        </button>
-        <button class="category-btn" data-category="beauty" title="Beauty & Fitness">
-          💄<br/>Beauty & Fitness
-        </button>
-        <button class="category-btn" data-category="home" title="Home & Garden">
-          🏡<br/>Home & Garden
-        </button>
-      </div>
-
-      <!-- Persona message box (moved here) -->
-      <div id="personaMessage" class="persona-box"></div>
-
-      <div class="result">
-        <p><strong>Estimated Monthly Savings:</strong></p>
-        <p>❌ Preventing Fulfilment Errors: <strong>£<span id="errorsCost">0</span></strong></p>
-        <p>🕒 Fulfilment Automations: <strong>£<span id="timeCost">0</span></strong></p>
-        <p>📈 Conversion Rate Uplift: <strong>£<span id="missedRevenue">0</span></strong></p>
-        <hr />
-        <h3>Total Savings: £<span id="total">0</span></h3>
-      </div>
-
-      <div class="assumptions">
-        <details>
-          <summary>What's this based on?</summary>
-          <ul>
-            <li>~0.5% of orders contain packing errors or ship to unvalidated addresses</li>
-            <li>Assumes orders takes 3 minutes to process manually</li>
-            <li>10% uplift on assumed 3% baseline conversion rate</li>
-          </ul>
-        </details>
-      </div>
+  <!-- Left: Zenstores hero section mockup -->
+  <div class="left-panel">
+    <h1>Upgrade your shipping.<br />From checkout to dispatch.</h1>
+    <p>Zenstores connects your checkout with how you actually ship orders. Unlock smarter delivery, faster fulfilment, and big savings on postage—all through one seamless integration.</p>
+    <div class="cta-buttons">
+      <button class="btn-primary">Start Free Trial</button>
+      <button class="btn-secondary">See It in Action</button>
     </div>
-
-    <!-- Right side removed as per request -->
   </div>
 
-  <script src="script.js"></script>
+  <!-- Right: Interactive calculator widget -->
+  <div class="right-panel">
+    <h2>What's the opportunity?</h2>
+
+    <label for="orders">Monthly Orders</label>
+    <input type="range" id="orders" min="0" max="2000" step="10" value="250" />
+
+    <label for="aov">Average Order Value (£)</label>
+    <input type="number" id="aov" min="0" max="1000" step="1" value="50" />
+
+    <label>Business Category</label>
+    <div class="category-buttons">
+      <div class="category-button selected" data-category="Fashion">Fashion</div>
+      <div class="category-button" data-category="Food & Drink">Food & Drink</div>
+      <div class="category-button" data-category="Beauty & Fitness">Beauty & Fitness</div>
+      <div class="category-button" data-category="Home & Garden">Home & Garden</div>
+    </div>
+
+    <div class="persona-message" id="personaMessage">Your persona message will appear here.</div>
+
+    <div class="results" id="results">
+      <div>Preventing Fulfilment Errors: £<span id="errorSavings">0</span></div>
+      <div>Fulfilment Automations: £<span id="automationSavings">0</span></div>
+      <div>Conversion Rate Uplift: £<span id="conversionUplift">0</span></div>
+      <div class="total">Total Estimated Savings: £<span id="totalSavings">0</span></div>
+      <div>Zenstores Pricing: £<span id="pricing">0</span> / month</div>
+      <div>Estimated ROI: <span id="roi">0</span> x</div>
+    </div>
+  </div>
+
+</div>
+
+<script>
+  // Calculator logic - simplified & rough example
+  const ordersInput = document.getElementById('orders');
+  const aovInput = document.getElementById('aov');
+  const categoryButtons = document.querySelectorAll('.category-button');
+
+  const personaMessageEl = document.getElementById('personaMessage');
+  const errorSavingsEl = document.getElementById('errorSavings');
+  const automationSavingsEl = document.getElementById('automationSavings');
+  const conversionUpliftEl = document.getElementById('conversionUplift');
+  const totalSavingsEl = document.getElementById('totalSavings');
+  const pricingEl = document.getElementById('pricing');
+  const roiEl = document.getElementById('roi');
+
+  let selectedCategory = 'Fashion';
+
+  function updatePersonaMessage(orders, aov, category) {
+    const baseMsg = `With ${orders} monthly orders and an average order value of £${aov}, `;
+    let categoryMsg = '';
+
+    switch(category) {
+      case 'Fashion':
+        categoryMsg = 'fashion retailers like you typically save on reducing returns and exchanges.';
+        break;
+      case 'Food & Drink':
+        categoryMsg = 'food & drink businesses often benefit from faster dispatch and less waste.';
+        break;
+      case 'Beauty & Fitness':
+        categoryMsg = 'beauty & fitness brands see gains from accurate delivery promises and repeat sales.';
+        break;
+      case 'Home & Garden':
+        categoryMsg = 'home & garden stores enjoy smoother fulfilment workflows and happy customers.';
+        break;
+    }
+
+    return baseMsg + categoryMsg;
+  }
+
+  function calculateSavings(orders, aov) {
+    // Rough example calculations
+    // Preventing Fulfilment Errors: 0.5% orders lost * AOV * orders
+    const errorSavings = Math.round(orders * 0.005 * aov);
+    // Fulfilment Automations: £0.8 per order
+    const automationSavings = Math.round(orders * 0.8);
+    // Conversion uplift: 10% uplift on 3% baseline conversion * AOV * orders
+    const conversionUplift = Math.round(orders * aov * 0.03 * 0.10);
+
+    return { errorSavings, automationSavings, conversionUplift };
+  }
+
+  function calculatePricing(orders) {
+    // rough pricing tiers
+    if (orders <= 500) return 29;
+    if (orders <= 1000) return 49;
+    if (orders <= 1500) return 69;
+    return 89;
+  }
+
+  function updateUI() {
+    const orders = Number(ordersInput.value);
+    const aov = Number(aovInput.value);
+
+    // Update persona message
+    personaMessageEl.textContent = updatePersonaMessage(orders, aov, selectedCategory);
+
+    // Calculate savings
+    const { errorSavings, automationSavings, conversionUplift } = calculateSavings(orders, aov);
+
+    // Update results UI
+    errorSavingsEl.textContent = errorSavings.toLocaleString();
+    automationSavingsEl.textContent = automationSavings.toLocaleString();
+    conversionUpliftEl.textContent = conversionUplift.toLocaleString();
+
+    const total = errorSavings + automationSavings + conversionUplift;
+    totalSavingsEl.textContent = total.toLocaleString();
+
+    const price = calculatePricing(orders);
+    pricingEl.textContent = price.toLocaleString();
+
+    // ROI (rounded)
+    const roi = (total / (price || 1)).toFixed(1);
+    roiEl.textContent = roi;
+  }
+
+  // Event listeners
+  ordersInput.addEventListener('input', updateUI);
+  aovInput.addEventListener('input', updateUI);
+
+  categoryButtons.forEach(btn => {
+    btn.addEventListener('click', () => {
+      categoryButtons.forEach(b => b.classList.remove('selected'));
+      btn.classList.add('selected');
+      selectedCategory = btn.getAttribute('data-category');
+      updateUI();
+    });
+  });
+
+  // Initial UI update
+  updateUI();
+</script>
+
 </body>
 </html>
