--- a/index.html
+++ b/index.html
@@ -10,10 +10,8 @@
   <div class="page-container">
     <!-- Left side: simplified homepage intro -->
     <section class="homepage-intro">
-      <h1>Welcome to Zenstores</h1>
-      <p>Your all-in-one fulfilment and shipping software for ecommerce businesses.</p>
-      <p>Automate your fulfilment, reduce errors, and delight your customers with accurate delivery promises.</p>
-      <p>Get started by telling us a little about your business on the right.</p>
+      <h1>Upgrade your shipping. From checkout to dispatch.</h1>
+      <p>Zenstores connects your checkout with how you actually ship orders. Unlock smarter delivery, faster fulfilment, and big savings on postage - all through one seamless integration.</p>
     </section>
 
     <!-- Right side: calculator widget -->
