--- a/index.html
+++ b/index.html
@@ -10,8 +10,18 @@
   <div class="page-container">
     <!-- Left side: simplified homepage intro -->
     <section class="homepage-intro">
-      <h1>Upgrade your shipping. From checkout to dispatch.</h1>
-      <p>Zenstores connects your checkout with how you actually ship orders. Unlock smarter delivery, faster fulfilment, and big savings on postage - all through one seamless integration.</p>
+      <h1>Upgrade your shipping. <em>From checkout to dispatch.</em></h1>
+      <p>Zenstores connects your checkout with how you actually ship orders. Unlock smarter delivery, faster fulfilment, and big savings on postage — all through one seamless integration.</p>
+
+      <div class="hero-buttons">
+        <a href="#" class="btn btn-primary">Get started</a>
+        <a href="#" class="btn btn-secondary">See it in action</a>
+      </div>
+
+      <div class="review-stars">
+        <img src="https://cdn.prod.website-files.com/66977bd785453b9d7b04a8b2/6697d0e5c72c34008b472ec1_review-stars-shopifyappstore.svg" alt="Shopify App Store Reviews" />
+        <img src="https://cdn.prod.website-files.com/66977bd785453b9d7b04a8b2/6697d0e55dec634b9685e7bf_review-stars-capterra.svg" alt="Capterra Reviews" />
+      </div>
     </section>
 
     <!-- Right side: calculator widget -->
@@ -39,9 +49,7 @@
         </div>
 
         <!-- Persona message below category -->
-        <div id="personaMessage" class="persona-box">
-          <!-- Persona text populated by JS -->
-        </div>
+        <div id="personaMessage" class="persona-box"></div>
 
         <!-- Monthly orders slider -->
         <label for="orders">Monthly Orders: <span id="orderValue">250</span></label>
@@ -79,4 +87,3 @@
   <script src="script.js"></script>
 </body>
 </html>
-
