--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
   <div class="page-container">
     <!-- Left side: simplified homepage intro -->
     <section class="homepage-intro">
-      <h1>Upgrade your shipping. <em>From checkout to dispatch.</em></h1>
-      <p>Zenstores connects your checkout with how you actually ship orders. Unlock smarter delivery, faster fulfilment, and big savings on postage — all through one seamless integration.</p>
+      <h1>Upgrade your shipping. From checkout to dispatch.</h1>
+      <p>Zenstores connects your checkout with how you actually ship orders. Unlock smarter delivery, faster fulfilment, and big savings on postage - all through one seamless integration.</p>
 
-      <div class="hero-buttons">
-        <a href="#" class="btn btn-primary">Get started</a>
-        <a href="#" class="btn btn-secondary">See it in action</a>
+      <div class="btn-group">
+        <button class="btn btn-primary">Get started</button>
+        <button class="btn btn-secondary">See it in action</button>
       </div>
 
-      <div class="review-stars">
-        <img src="https://cdn.prod.website-files.com/66977bd785453b9d7b04a8b2/6697d0e5c72c34008b472ec1_review-stars-shopifyappstore.svg" alt="Shopify App Store Reviews" />
-        <img src="https://cdn.prod.website-files.com/66977bd785453b9d7b04a8b2/6697d0e55dec634b9685e7bf_review-stars-capterra.svg" alt="Capterra Reviews" />
+      <div class="reviews">
+        <img src="https://cdn.prod.website-files.com/66977bd785453b9d7b04a8b2/6697d0e5c72c34008b472ec1_review-stars-shopifyappstore.svg" alt="Shopify App Store reviews" />
+        <img src="https://cdn.prod.website-files.com/66977bd785453b9d7b04a8b2/6697d0e55dec634b9685e7bf_review-stars-capterra.svg" alt="Capterra reviews" />
       </div>
     </section>
 
@@ -53,32 +53,18 @@
 
         <!-- Monthly orders slider -->
         <label for="orders">Monthly Orders: <span id="orderValue">250</span></label>
-        <input type="range" id="orders" min="250" max="25000" value="250" step="250" />
+        <input type="range" id="orders" min="250" max="20000" value="250" step="250" />
 
         <!-- Average order value -->
         <label for="aov">Average Order Value (£):</label>
         <input type="number" id="aov" value="50" min="0" />
 
-        <!-- Estimated savings -->
-        <div class="result">
-          <p><strong>Estimated Monthly Savings:</strong></p>
-          <p>❌ Preventing Fulfilment Errors: <strong>£<span id="errorsCost">0</span></strong></p>
-          <p>🕒 Fulfilment Automations: <strong>£<span id="timeCost">0</span></strong></p>
-          <p>📈 Conversion Rate Uplift: <strong>£<span id="missedRevenue">0</span></strong></p>
-          <hr />
-          <h3>Total Savings: £<span id="total">0</span></h3>
-        </div>
-
-        <!-- Assumptions -->
-        <div class="assumptions">
-          <details>
-            <summary>What's this based on?</summary>
-            <ul id="assumptionsList">
-              <li>~0.5% of orders contain packing errors or ship to unvalidated addresses</li>
-              <li>Assumes orders takes 3 minutes to process manually</li>
-              <li>10% uplift on assumed 3% baseline conversion rate</li>
-            </ul>
-          </details>
+        <!-- Similar businesses section -->
+        <div class="similar-businesses">
+          <h3>Similar businesses we've helped</h3>
+          <div id="businessExamples">
+            <!-- Dynamic content goes here -->
+          </div>
         </div>
       </div>
     </section>
