--- a/index.html
+++ b/index.html
@@ -1,75 +1,125 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Zenstores Homepage with Calculator</title>
-  <link rel="stylesheet" href="styles.css" />
-</head>
-<body>
-  <div class="page-container">
-    <!-- Left side: simplified homepage intro -->
-    <section class="homepage-intro">
-      <h1>Upgrade your shipping. From checkout to dispatch.</h1>
-      <p>Zenstores connects your checkout with how you actually ship orders. Unlock smarter delivery, faster fulfilment, and big savings on postage - all through one seamless integration.</p>
+const categories = {
+  Fashion: [
+    {
+      volumeMax: 2000,
+      persona: "Small fashion startups needing quick turnaround for seasonal trends.",
+      example: "We've helped indie boutiques increase shipping speed by 30%."
+    },
+    {
+      volumeMax: 10000,
+      persona: "Growing fashion brands managing multiple SKUs and seasonal peaks.",
+      example: "We supported brands scaling from 5k to 15k orders/month."
+    },
+    {
+      volumeMax: Infinity,
+      persona: "Large fashion retailers with complex fulfilment needs.",
+      example: "Helping enterprise brands cut fulfilment errors by 50%."
+    }
+  ],
+  "Food & Drink": [
+    {
+      volumeMax: 2000,
+      persona: "Local food producers focused on freshness and fast delivery.",
+      example: "Enabled artisan food shops to reduce delivery delays by 20%."
+    },
+    {
+      volumeMax: 10000,
+      persona: "Regional food & drink companies optimizing cold-chain logistics.",
+      example: "Helping brands scale with real-time delivery tracking."
+    },
+    {
+      volumeMax: Infinity,
+      persona: "National food distributors managing complex shipping routes.",
+      example: "Reducing wastage and improving customer satisfaction at scale."
+    }
+  ],
+  "Beauty & Fitness": [
+    {
+      volumeMax: 2000,
+      persona: "Boutique beauty brands with personalized packaging needs.",
+      example: "Streamlined order packing to boost customer retention."
+    },
+    {
+      volumeMax: 10000,
+      persona: "Mid-sized fitness and beauty companies expanding product lines.",
+      example: "Helped businesses launch new SKUs without disruption."
+    },
+    {
+      volumeMax: Infinity,
+      persona: "Large beauty and fitness brands managing high volume fulfilment.",
+      example: "Reducing returns and errors for national distribution."
+    }
+  ],
+  "Home & Garden": [
+    {
+      volumeMax: 2000,
+      persona: "Small homeware brands focusing on quality and care in packing.",
+      example: "Improved packaging speed and reduced damage rates."
+    },
+    {
+      volumeMax: 10000,
+      persona: "Growing garden and home product sellers expanding online.",
+      example: "Supported scale-up with integrated shipping solutions."
+    },
+    {
+      volumeMax: Infinity,
+      persona: "Large home & garden retailers with multi-warehouse fulfilment.",
+      example: "Optimised logistics to cut delivery times by 40%."
+    }
+  ]
+};
 
-      <div class="btn-group">
-        <button class="btn btn-primary">Get started</button>
-        <button class="btn btn-secondary">See it in action</button>
-      </div>
+const categoryButtons = document.querySelectorAll(".category-btn");
+const ordersSlider = document.getElementById("orders");
+const orderValueDisplay = document.getElementById("orderValue");
+const aovInput = document.getElementById("aov");
+const personaMessage = document.getElementById("personaMessage");
+const businessExamples = document.getElementById("businessExamples");
 
-      <div class="reviews">
-        <img src="https://cdn.prod.website-files.com/66977bd785453b9d7b04a8b2/6697d0e5c72c34008b472ec1_review-stars-shopifyappstore.svg" alt="Shopify App Store reviews" />
-        <img src="https://cdn.prod.website-files.com/66977bd785453b9d7b04a8b2/6697d0e55dec634b9685e7bf_review-stars-capterra.svg" alt="Capterra reviews" />
-      </div>
-    </section>
+let selectedCategory = "Fashion";
 
-    <!-- Right side: calculator widget -->
-    <section class="calculator-container">
-      <div class="calculator current-logic">
-        <h2>What's the opportunity?</h2>
+// Utility to get tier info by orders for category
+function getTier(category, orders) {
+  const tiers = categories[category];
+  for (const tier of tiers) {
+    if (orders <= tier.volumeMax) return tier;
+  }
+  return tiers[tiers.length - 1]; // fallback to last tier (Infinity)
+}
 
-        <!-- Business category selector -->
-        <div class="business-category">
-          <p>Select your business category:</p>
-          <div class="category-buttons">
-            <button data-category="Fashion" class="category-btn selected" title="Fashion">
-              👗<br /><span>Fashion</span>
-            </button>
-            <button data-category="Food & Drink" class="category-btn" title="Food & Drink">
-              🍔<br /><span>Food & Drink</span>
-            </button>
-            <button data-category="Beauty & Fitness" class="category-btn" title="Beauty & Fitness">
-              💄<br /><span>Beauty & Fitness</span>
-            </button>
-            <button data-category="Home & Garden" class="category-btn" title="Home & Garden">
-              🏡<br /><span>Home & Garden</span>
-            </button>
-          </div>
-        </div>
+function updateUI() {
+  // Clamp orders slider max to 20000
+  let orders = parseInt(ordersSlider.value, 10);
+  if (orders >= 20000) {
+    orderValueDisplay.textContent = "20,000+";
+    orders = 20000;
+  } else {
+    orderValueDisplay.textContent = orders.toLocaleString();
+  }
 
-        <!-- Persona message below category -->
-        <div id="personaMessage" class="persona-box"></div>
+  // Update persona & examples
+  const tier = getTier(selectedCategory, orders);
+  personaMessage.textContent = tier.persona || "";
 
-        <!-- Monthly orders slider -->
-        <label for="orders">Monthly Orders: <span id="orderValue">250</span></label>
-        <input type="range" id="orders" min="250" max="20000" value="250" step="250" />
+  // Update example businesses content
+  businessExamples.textContent = tier.example || "";
+}
 
-        <!-- Average order value -->
-        <label for="aov">Average Order Value (£):</label>
-        <input type="number" id="aov" value="50" min="0" />
+// Handle category button clicks
+categoryButtons.forEach((btn) => {
+  btn.addEventListener("click", () => {
+    categoryButtons.forEach((b) => b.classList.remove("selected"));
+    btn.classList.add("selected");
+    selectedCategory = btn.getAttribute("data-category");
+    updateUI();
+  });
+});
 
-        <!-- Similar businesses section -->
-        <div class="similar-businesses">
-          <h3>Similar businesses we've helped</h3>
-          <div id="businessExamples">
-            <!-- Dynamic content goes here -->
-          </div>
-        </div>
-      </div>
-    </section>
-  </div>
+// Update on slider or AOV input change (AOV kept in UI for future use)
+ordersSlider.addEventListener("input", updateUI);
+aovInput.addEventListener("input", () => {
+  // You could use AOV in calculations later if needed
+});
 
-  <script src="script.js"></script>
-</body>
-</html>
+// Initialize UI on load
+updateUI();
