--- a/index.html
+++ b/index.html
@@ -2,60 +2,45 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Zenstores Homepage with Calculator</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="styles.css" />
+  <title>Zenstores Calculator</title>
 </head>
 <body>
-  <div class="page-container">
-    <!-- Left side -->
-    <section class="homepage-intro">
-      <h1>Upgrade your shipping. From checkout to dispatch.</h1>
-      <p>
-        Zenstores connects your checkout with how you actually ship orders.
-        Unlock smarter delivery, faster fulfilment, and big savings on postage –
-        all through one seamless integration.
-      </p>
-      <div class="cta-buttons">
-        <button class="btn-primary">Get started</button>
-        <button class="btn-secondary">See it in action</button>
+  <div class="container">
+    <div class="left-panel">
+      <h1>Zenstores</h1>
+      <div class="button-group">
+        <button class="btn primary">Get Started</button>
+        <button class="btn secondary">See it in Action</button>
       </div>
       <div class="reviews">
-        <img src="https://cdn.prod.website-files.com/66977bd785453b9d7b04a8b2/6697d0e5c72c34008b472ec1_review-stars-shopifyappstore.svg" alt="Shopify App Store Reviews" />
+        <img src="https://cdn.prod.website-files.com/66977bd785453b9d7b04a8b2/6697d0e5c72c34008b472ec1_review-stars-shopifyappstore.svg" alt="Shopify Reviews" />
         <img src="https://cdn.prod.website-files.com/66977bd785453b9d7b04a8b2/6697d0e55dec634b9685e7bf_review-stars-capterra.svg" alt="Capterra Reviews" />
       </div>
-    </section>
+    </div>
 
-    <!-- Right side -->
-    <section class="calculator-container">
-      <div class="calculator">
-        <h2>What's the opportunity?</h2>
-
-        <!-- Category selection -->
-        <div class="business-category">
-          <p>Select your business category:</p>
-          <div class="category-buttons">
-            <button data-category="Fashion" class="category-btn selected">👗<br /><span>Fashion</span></button>
-            <button data-category="Food & Drink" class="category-btn">🍔<br /><span>Food & Drink</span></button>
-            <button data-category="Beauty & Fitness" class="category-btn">💄<br /><span>Beauty & Fitness</span></button>
-            <button data-category="Other" class="category-btn">🏡<br /><span>Other</span></button>
-          </div>
-        </div>
-
-        <!-- Persona message -->
-        <div id="personaMessage" class="persona-box"></div>
-
-        <!-- Order slider -->
-        <label for="orders">Monthly Orders: <span id="orderValue">250</span></label>
-        <input type="range" id="orders" min="250" max="20000" value="250" step="250" />
-
-        <!-- Similar businesses -->
-        <div class="case-studies">
-          <p><strong>Similar businesses we've helped:</strong></p>
-          <div id="caseStudyList" class="case-study-list"></div>
-        </div>
+    <div class="right-panel">
+      <div class="category-selector">
+        <button class="category-btn selected" data-category="Fashion">Fashion</button>
+        <button class="category-btn" data-category="Food & Drink">Food & Drink</button>
+        <button class="category-btn" data-category="Beauty & Fitness">Beauty & Fitness</button>
+        <button class="category-btn" data-category="Other">Other</button>
       </div>
-    </section>
+
+      <div class="slider-section">
+        <label for="orders">Orders per Month: <span id="orderValue">250</span></label>
+        <input type="range" id="orders" min="250" max="20000" step="250" value="250" />
+      </div>
+
+      <div id="personaMessage" class="persona-box"></div>
+
+      <div class="case-studies">
+        <div class="case-study-box" id="case1"></div>
+        <div class="case-study-box" id="case2"></div>
+        <div class="case-study-box" id="case3"></div>
+      </div>
+    </div>
   </div>
 
   <script src="script.js"></script>
