--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
          <!-- Persona message below category -->
         <div id="personaMessage" class="persona-box"></div>
 
+        <!-- Persona-specific challenges -->
+<h3>Challenges you may face</h3>
+<ul id="challengesContainer" class="challenges-list"></ul>
+
         <!-- Similar businesses we've helped -->
         <h3>Similar businesses we've helped</h3>
         <div id="similarBusinesses" class="similar-businesses-container"></div>
