--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- Right side: calculator widget -->
     <section class="calculator-container">
       <div class="calculator current-logic">
-        <h2>What's the opportunity?</h2>
+        <h2>Are we a good fit?</h2>
 
         <!-- Business category selector -->
         <div class="business-category">
