--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
 
         <!-- Monthly orders slider -->
-        <label for="orders">Monthly Orders: <span id="orderValue">250</span></label>
+        <label for="orders">Monthly Shipments Volume: <span id="orderValue">250</span></label>
         <input type="range" id="orders" min="250" max="20000" value="250" step="250" />
 
          <!-- Persona message below category -->
